--- a/frontend/src/style/reset.css
+++ b/frontend/src/style/reset.css
@@ -20,12 +20,12 @@
   --more-list-shadow: rgba(209, 209, 209, 0.4);
   --button-bg: #1f1c24;
   --search-area-bg: #fff;
-  --star: #1ff1c2e;
+  --star: #ff1c2e;
   --boder-color: #de7474;
   --button-color-add: #d5deff;
   --button-color-search: #fee4cb;
   --button-color-reset: #c8f7dc;
-  --button-update: #4bac4d;
+  --button-update: #56d4a0;
   --button-delete: #db4e65;
 }
 
