--- a/backend/api/templates/base.html
+++ b/backend/api/templates/base.html
@@ -1,7 +1,8 @@
-{% extends 'layout.html' %} {% block title %} Home {% endblock %} {% block content %}
+{% extends 'layout.html' %} {% block title %} Home {% endblock %}
+{% block content %}
 
-<div class="row ">
-  <form class="col-9 " method="POST" action="" id="weddingForm">
+<div class="row">
+  <form class="col-9" method="POST" action="" id="weddingForm">
     {% csrf_token %}
     <ul class="nav nav-tabs" id="myTab" role="tablist">
       <li class="nav-item" role="presentation">
@@ -52,14 +53,14 @@
         class="tab-pane fade show active"
         id="home-tab-pane"
         role="tabpanel"
-        aria-labelledby="home-tab"  
+        aria-labelledby="home-tab"
         tabindex="0"
       >
         <div id="khachhang"></div>
-        
 
         <h4>Thông tin tiệc cưới</h4>
         <div class="row">
+          {% comment %}
           <div class="col mb-3" id="weddingInfo">
             <label for="ngaydattiec" class="form-label">Ngày đặt tiệc</label>
             <input
@@ -70,13 +71,14 @@
               placeholder="Ngày đặt tiệc"
             />
           </div>
+          {% endcomment %}
           <div class="col mb-3" id="weddingInfo">
             <label for="ngaydaitiec" class="form-label">Ngày đãi tiệc </label>
             <input
               type="date"
               class="form-control"
-              id="ngaydaitiec"
-              name ="ngaydaitiec"
+              id="ngaydaitiec_input"
+              name="ngaydaitiec"
               placeholder="Ngày đãi tiệc "
             />
           </div>
@@ -84,35 +86,37 @@
         <div class="row">
           <div class="col mb-3" id="weddingInfo">
             <label for="maca" class="form-label">Ca</label>
-            <select class="form-select" name="maca" aria-label="Default select example">
-             
-              <option value="1">One</option>
-              <option value="2">Two</option>
-              <option value="3">Three</option>
+
+            <select
+              class="form-select"
+              name="maca_select"
+              id="maca_select"
+              aria-label="Default select example"
+            >
+              <option value="">Chọn ca</option>
+              {% for shift in shifts %}
+              <option value={{shift.maca}}>
+                {{shift.tenca}} ({{shift.giobatdau}}-{{shift.gioketthuc}})
+              </option>
+              {%endfor%}
             </select>
           </div>
-          <div class="col mb-3" id="weddingInfo">
-            <label for="masanh" class="form-label">Sảnh</label>
-            <select class="form-select" name="masanh" aria-label="Default select example">
-              
-              <option value="1">One</option>
-              <option value="2">Two</option>
-              <option value="3">Three</option>
-            </select>
+          <div  class="col mb-3" id="selectLobbies">
           </div>
         </div>
         <div class="row">
           <div class="col mb-3" id="weddingInfo">
-            <label for="soluongban" class="form-label">Số lượng bàn</label>
+            <label for="soluongban" class="form-label" id="soluongban_lable">Số lượng bàn</label>
             <input
               type="number"
               class="form-control"
-              id="soluongban"
-              name = "soluongban"
+              id="soluongban_input"
+              min=1
+              name="soluongban"
               placeholder="Số lượng bàn"
             />
           </div>
-          <div class="col mb-3" id="weddingInfo">
+          {% comment %} <div class="col mb-3" id="weddingInfo">
             <label for="soluongbandutru" class="form-label"
               >Số lượng bàn dự trữ</label
             >
@@ -123,7 +127,7 @@
               name="soluongbandutru"
               placeholder="Số lượng bàn dự trữ"
             />
-          </div>
+          </div> {% endcomment %}
         </div>
       </div>
       <div
@@ -134,14 +138,16 @@
         tabindex="0"
       >
         <select
-        id="foodTypeSelect"
+          id="foodTypeSelect"
           class="form-select form-select-sm outline-none"
           aria-label="Small select example"
         >
-        {% for foodType in foodTypes %}
-         
-          <option value={{foodType.maloaimonan}}>{{foodType.tenloaimonan}}</option>
-         
+          {% for foodType in foodTypes %}
+
+          <option value="{{foodType.maloaimonan}}">
+            {{foodType.tenloaimonan}}
+          </option>
+
           {% endfor %}
         </select>
         <table class="table">
@@ -158,13 +164,17 @@
           <tbody>
             {% for food in foods %}
             <tr class="foodRow" data-loaimonan="{{ food.maloaimonan }}">
-              <th scope="row" >{{ forloop.counter }}</th>
+              <th scope="row">{{ forloop.counter }}</th>
               <td>{{ food.tenmonan }}</td>
               <td>{{ food.maloaimonan}}</td>
               <td>{{ food.dongia }}</td>
               <td>{{ food.ghichu }}</td>
               <td id="weddingInfo">
-                <input type="checkbox" name="selected_foods" value="{{ food.mamonan }}" />
+                <input
+                  type="checkbox"
+                  name="selected_foods"
+                  value="{{ food.mamonan }}"
+                />
               </td>
             </tr>
             {% endfor %}
@@ -195,7 +205,7 @@
               <th scope="row">{{ forloop.counter }}</th>
               <td>{{ service.tendichvu }}</td>
               <td>{{ service.loaidichvu.tenloaidichvu }}</td>
-              
+
               <td>{{ service.dongia }}</td>
               <td>{{ service.ghichu }}</td>
               <td id="weddingInfo">
@@ -212,50 +222,48 @@
       </div>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
- 
   </form>
-  <div class="col-3 wedding-info p-2" >
+  <div class="col-3 wedding-info p-2">
     <h4>Thông tin khách hàng</h4>
-        <div class="row">
-          <div class="col mb-3" id="weddingInfo">
-            <label for="tenchure" class="form-label">Tên chú rể</label>
-            <input
-              type="text"
-              class="form-control"
-              id="tenchure"
-              name="tenchure"
-              placeholder="Tên chú rể"
-            />
-          </div>
-          <div class="col mb-3" id="weddingInfo">
-            <label for="tencodau" class="form-label">Tên cô dâu</label>
-            <input
-              type="text"
-              class="form-control"
-              id="tencodau"
-              name="tencodau"
-              placeholder="Tên cô dâu"
-            />
-          </div>
-        </div>
-        <div class="mb-3">
-          <label for="sdt" class="form-label">Số điện thoại</label>
-          <input
-            type="text"
-            class="form-control"
-            id="sdt"
-            name="sdt"
-            placeholder="Số điện thoại"
-          />
-        </div>
-        
-        <div id="weddingInfoDisplay">
-          <p id="ngaydaitiec"></p>
-        </div>
-  </div>
-  
-  
+    <div class="row">
+      <div class="col mb-3" id="weddingInfo">
+        <label for="tenchure" class="form-label">Tên chú rể</label>
+        <input
+          type="text"
+          class="form-control"
+          id="tenchure"
+          name="tenchure"
+          placeholder="Tên chú rể"
+        />
+      </div>
+      <div class="col mb-3" id="weddingInfo">
+        <label for="tencodau" class="form-label">Tên cô dâu</label>
+        <input
+          type="text"
+          class="form-control"
+          id="tencodau"
+          name="tencodau"
+          placeholder="Tên cô dâu"
+        />
+      </div>
+    </div>
+    <div class="mb-3">
+      <label for="sdt" class="form-label">Số điện thoại</label>
+      <input
+        type="text"
+        class="form-control"
+        id="sdt"
+        name="sdt"
+        placeholder="Số điện thoại"
+      />
+    </div>
 
+    <div id="weddingInfoDisplay"></div>
+    <p id="ngaydattiectext"></p>
+    <p id="ngaydaitiec_value"></p>
+    <p id="tenca_value"></p>
+    <p id="thoigian_value"></p>
+  </div>
 </div>
 
 {% endblock %}
