--- a/backend/api/templates/layout.html
+++ b/backend/api/templates/layout.html
@@ -8,12 +8,13 @@
 
     </title>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-    <script src="{% static 'js/script.js' %}" defer></script>
+    
     <link
     rel="stylesheet"
     type="text/css"
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
   />
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -85,6 +86,6 @@
             {% block content %}{% endblock %}
         </main>
     </div>
-   
+    <script src="{% static 'js/script.js' %}" defer></script>
 </body>
 </html>
