add search && report

--- a/backend/api/templates/base.html
+++ b/backend/api/templates/base.html
@@ -240,7 +240,7 @@
         <tbody></tbody>
         <tfoot>
           <tr>
-            <td colSpan="4" style="textAlign: "right"">
+            <td colSpan="4" style="textAlign:right">
               Tổng tiền đơn giá bàn:
             </td>
             <td id="result_tdgb">
@@ -265,7 +265,7 @@
       <tbody></tbody>
       <tfoot>
         <tr>
-          <td colSpan="5" style="textAlign: "right"">
+          <td colSpan="5" style="textAlign: right">
             Tổng tiền dịch vụ:
           </td>
           <td id="result_ttdd">
